examples/test/testpolicy4394.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4394
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key48: value10
      key19: value18
      key16: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value26
          key26: value34
          key12: value31
      podSelector:
        matchLabels:
          key22: value13
          key39: value37
